--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@react-google-maps/api": "^2.19.3",
     "axios": "^1.7.2",
     "formik": "^2.4.6",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.0",
     "react-router-dom": "^6.22.3",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.8",
     "yup": "^1.4.0"
   },
